--- a/sass/src/index.html
+++ b/sass/src/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>второе задание</title>
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/main.min.css" />
   </head>
   <body>
     <div class="main-wrapper">
@@ -68,7 +67,7 @@
             <section class="main-wrapper">
               <h1 class="visually-hidden">Digital design</h1>
               <div class="wrapper--banner">
-                <img src="./img/baner.png" alt="" class="banner__img" />
+                <img src="./img/baner.png" alt="baner" class="banner__img" />
                 <div class="banner__description">
                   <p class="banner__title banner__text">
                     Share your Foor Sence
