mixin, each and breakpoints

--- a/sass/src/index.html
+++ b/sass/src/index.html
@@ -239,7 +239,7 @@
                 <a href="#" class="address__list--twitter adress__icon"></a>
               </li>
               <li class="adress__list--social">
-                <a href="#" class="address__list--facebook"></a>
+                <a href="#" class="address__list--facebook address__list--fb"></a>
               </li>
               <li class="adress__list--social">
                 <a href="#" class="address__list--links adress__icon"></a>
